# DNPlayer

./: settings.gradle
app/: README.md  build.gradle
app/src/androidTest/java/com/example/dnplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h  JavaCallHelper.cpp  JavaCallHelper.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
app/src/main/java/com/example/dnplayer/: MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dnplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
